# playrs

./: Cargo.toml  README.md
gui/: Cargo.toml
gui/src/: components.rs  main.rs  player.rs
playback/: Cargo.toml
playback/src/: lib.rs  playback.rs
