[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["smol"] }
iced_native = "0.10.3"
native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
playback = {path = "../playback"}
gstreamer = "0.20.5"
gstreamer-player = "0.20.5"
font-awesome = "0.2.0"
