[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["smol"] }
iced_native = "0.10.3"
playback = {path = "../playback"}
gstreamer = "0.22.0"
gstreamer-player = "0.22.0"
font-awesome = "0.2.0"
rfd = { version = "0.14.1", default-features = false, features = ["xdg-portal"] }
